--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "svr_model.py",
-        "use": "@vercel/python",
-        "config": {
-          "pythonVersion": "3.8"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "svr_model.py"
-      }
-    ]
+    "build": {
+      "env": {
+        "PYTHON_VERSION": "3.8"
+      },
+      "commands": [
+        "apt-get update && apt-get install -y cmake",
+        "pip install -r requirements.txt"
+      ]
+    }
   }
   
